# Certif_DevIA

./: .gitignore  01-init.sql  docker-compose.yml  env_example.txt
E1/: .env_exemple  Dockerfile  MIGRATION_SFTP.md  RAPPORT.md  RAPPORT_FTP_LOG_SERVICE.md  RAPPORT_INIT_SQL.md  RAPPORT_MYSQL_SYNC_SERVICE.md  RAPPORT_REQUIREMENTS_TXT.md  RAPPORT_START_SH.md  README.md  clean_database.py  crontab.txt  docker-compose.yaml  env_exemple.txt  ftp_log_service.py  init.sql  models_commandes.py  parser.py  queries.ipynb  requirements.txt  script.py  service.py  test_service.py
E2/: QUESTIONS_TEST.md  README.md  SAKILA_DOCUMENTATION.md  ollama.ipynb  openai.ipynb  sakila copy.ipynb  sakila.ipynb
E3/: .env_exemple.txt  Dockerfile  README.md  auth.py  create_admin.py  database.py  docker-compose.yml  langchain_utils.py  requirements.txt  routes.py  schemas.py  start.sh
E3-E4/: .env_example  C14.md  C15.md  C16.md  C17.md  CI_CD_GUIDE.md  DEPENDENCY_RESOLUTION.md  MONITORING.md  MONITORING_GUIDE.md  README_MONITORING.md  SUMMARY_IMPROVEMENTS.md  TEST_ERRORS_FIX.md  docker-compose.yml  env_example.txt  init.sql  install_dependencies.sh  prometheus.yml  test_monitoring.py
E3-E4/fastapi/: Dockerfile  README.md  TESTING_GUIDE.md  app.py  auth.py  create_test_users.py  database.py  langchain_utils.py  models.py  monitoring.py  monitoring_utils.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  routes.py  run_all_tests.py  schemas.py  test_monitoring_fix.py  utils.py
E3-E4/fastapi/alembic/: README  env.py  script.py.mako
E3-E4/fastapi/alembic/versions/: 0001_initial.py  144064ceef84_.py
E3-E4/fastapi/faiss_index_pdf/: index.faiss  index.pkl
E3-E4/fastapi/routes/: admin.py  auth.py  conversation.py
E3-E4/fastapi/static/css/: styles.css
E3-E4/fastapi/static/js/: main.js
E3-E4/fastapi/templates/: base.html  client_home.html  client_register.html  conversation_detail.html  conversations_list.html  dashboard.html  error.html  login.html  openai_chat.html
E3-E4/fastapi/tests/: __init__.py  conftest.py  test_add.py  test_ai_endpoints.py  test_ai_integration.py  test_api_endpoints.py  test_app_configuration.py  test_application.py  test_auth.py  test_auth_and_db.py  test_database.py  test_fastapi_endpoints.py  test_langchain_utils.py  test_metrics.py  test_models.py  test_monitoring_utils.py  test_openai_api.py  test_rag_components.py  test_rag_functionality.py  test_routes_utils.py  test_scripts.py  test_security.py  test_validation.py
E4/: env_example.txt
E5/: Dockerfile  README.md  build_prod_commands.txt  docker-compose.dev.yml  prometheus.yml  (+1 more)
(+140 files in other folders)
